# svp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  blueprint_contracts.md  conftest.py  environment.yml  opencode.json.example  pyproject.toml  svp_core_architecture.md  sync_workspace.sh
.claude-plugin/: marketplace.json
.svp/: assembly_map.json  audit_known_false_positives.md  build_log.json  build_log.jsonl
blueprint/: blueprint_contracts.md  blueprint_prose.md
docs/: CLAUDE.md  architecture.md  blueprint.md  blueprint_contracts.md  blueprint_prose.md  extending-languages.md  opencode_mcp_integration.md  project_context.md  project_profile.json  regression_test_import_map.json  stakeholder.md  stakeholder_spec.md  svp_2_1_lessons_learned.md  svp_2_1_summary.md  writing-specifications.md
docs/history/: blueprint_contracts_pre_bug62.md  blueprint_contracts_pre_bug63.md  blueprint_contracts_pre_bug66.md  blueprint_contracts_pre_bug69.md  blueprint_contracts_pre_bug72.md  blueprint_contracts_pre_bug86.md  blueprint_contracts_pre_rfc2.md  blueprint_contracts_pre_rfc2_gaps.md  blueprint_contracts_v1_diff.md  blueprint_pre_rfc2_gaps.md  blueprint_prose_pre_rfc2.md  blueprint_prose_pre_rfc2_gaps.md  blueprint_prose_v1.md  blueprint_prose_v1_diff.md  blueprint_v1.md  blueprint_v1_diff.md  stakeholder_spec_pre_bug63.md  stakeholder_spec_pre_bug66.md  stakeholder_spec_pre_bug69.md  stakeholder_spec_pre_bug70.md  stakeholder_spec_pre_bug72.md  stakeholder_spec_pre_bug86.md  stakeholder_spec_pre_rfc2_gaps.md  stakeholder_spec_v1_diff.md
docs/references/: README_v1.2.1.md  README_v2.0.md  extending-languages.md  svp_2_1_baseline.md  svp_2_1_lessons_learned.md  svp_2_1_summary.md  svp_product_roadmap.md  svp_v2_blueprint.md  svp_v7_stakeholder_spec.md  toolchain_manifest_schema.md
examples/game-of-life/: README.md  blueprint.md  blueprint_contracts.md  blueprint_prose.md  oracle_manifest.json  oracle_trajectory.json  project_context.md  stakeholder_spec.md
examples/gol-plugin/: README.md  blueprint_contracts.md  blueprint_prose.md  oracle_manifest.json  project_context.md  stakeholder_spec.md
examples/gol-python-r/: README.md  blueprint_contracts.md  blueprint_prose.md  oracle_manifest.json  project_context.md  stakeholder_spec.md
examples/gol-r/: README.md  blueprint_contracts.md  blueprint_prose.md  oracle_manifest.json  project_context.md  stakeholder_spec.md
examples/gol-r-python/: README.md  blueprint_contracts.md  blueprint_prose.md  oracle_manifest.json  oracle_trajectory.json  project_context.md  stakeholder_spec.md
references/: svp_2_1_lessons_learned.md
specs/: stakeholder_spec.md
src/svp_app/: __init__.py
src/svp_core/: __init__.py  action.py  dispatch.py  ledger_manager.py  pipeline_state.py  router.py  vocabulary.py
src/svp_host_claude/: __init__.py  command_builders.py  launcher_adapter.py
src/svp_mcp/: __init__.py  server.py
src/unit_1/: stub.py
src/unit_10/: stub.py  unit_9_stub.py
src/unit_11/: stub.py
src/unit_13/: stub.py  unit_12_stub.py  unit_1_stub.py  unit_4_stub.py  unit_7_stub.py
src/unit_14/: stub.py  unit_1_stub.py  unit_2_stub.py  unit_4_stub.py  unit_5_stub.py  (+1 more)
svp/: README.md
svp-gemini/: README.md
tests/: conftest.py  test_entry_point_completeness.py  test_ledger_cross_platform.py  test_svp_mcp.py  test_svp_mcp_e2e.py  test_svp_mcp_server.py
(+481 files in other folders)
