[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "svp"
version = "2.1.1"
description = "Stratified Verification Pipeline — deterministically orchestrated LLM-assisted software development"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Carlo Fusco", email = "carlo.fusco@unil.ch"},
    {name = "Leonardo Restivo", email = "leonardo.restivo@unil.ch"},
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
svp = "svp.scripts.svp_launcher:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["svp*"]

[tool.pytest.ini_options]
pythonpath = [".", "svp/scripts"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["svp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
